# xtm-composer

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  clippy.toml  entrypoint.sh  renovate.json  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature_request.md  bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: auto-label-issues.yml  check-pr-issue.yml  main.yml  release.yml  run-test-on-push.yml  test.yml
api/opencti/: README.md  opencti.graphql
config/: default.toml  default.yaml
contracts/: ipinfo.schema.json  mitre.schema.json
contracts/openbas/: sentinel-collector.schema.json
contracts/opencti/: ipinfo.schema.json  mitre.schema.json
dev/: Test xtm-composer.run.xml
dev/contracts/: openbas-manifest.json  opencti-manifest.json
dev/kube/: README.md  service-account.yml  xtm-composer.yml
docs/: configuration.md  development.md  installation.md  registry-authentication-explained.md
run/: Run xtm-composer.run.xml  opencti-composer.run.xml  xtm-composer.run.xml
schemas/: README.md  opencti.graphql
src/: lib.rs  main.rs  signals.rs
src/api/: connector.rs  decrypt_value.rs  engine.rs  manager.rs  mod.rs  tests.rs
src/api/openaev/: api_handler.rs  mod.rs
src/api/openaev/connector/: get_connector_instances.rs  mod.rs  notify_container_removed.rs  patch_health.rs  patch_status.rs  post_logs.rs
src/api/openaev/manager/: get_version.rs  mod.rs  ping_alive.rs  post_register.rs
src/api/openbas/: mod.rs  openbas.rs
src/api/opencti/: connector.rs  error_handler.rs  manager.rs  mod.rs  opencti.rs
src/api/opencti/connector/: get_listing.rs  get_proxy_config.rs  mod.rs  post_health.rs  post_logs.rs  post_status.rs
src/api/opencti/manager/: get_version.rs  mod.rs  post_ping.rs  post_register.rs
src/config/: mod.rs  rsa.rs  secret_string.rs  settings.rs
src/engine/: mod.rs  openaev.rs  openbas.rs  opencti.rs
src/orchestrator/: composer.rs  docker.rs  image.rs  kube.rs  mod.rs  portainer.rs  registry_cache.rs  registry_resolver.rs
src/orchestrator/docker/: docker.rs  mod.rs
src/orchestrator/kubernetes/: kubernetes.rs  mod.rs  secret_refresher.rs
src/orchestrator/portainer/: mod.rs  portainer.rs
src/orchestrator/portainer/docker/: mod.rs  portainer.rs
src/orchestrator/swarm/: mod.rs  swarm.rs
src/orchestrator/tests/: composer_tests.rs  error_handling_tests.rs  integration_tests.rs  kubernetes_secrets.rs  mod.rs  registry_resolver.rs  registry_resolver_concurrency.rs
src/prometheus/: mod.rs
src/system/: signals.rs
tests/: composer_cleanup_shared_mode.rs  orchestrator_labels.rs
