[package]
name = "xtm-composer"
version = "1.0.0"
edition = "2024"

[dependencies]
bollard = { version = "0.18.1" }
futures = { version = "0.3.31" }
url = { version = "2.5.4" }
rolling-file = { version = " 0.2.0" }
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
async-trait = { version = "0.1.87" }
reqwest = { version = "0.12.12" }
serde_json = { version = "1.0.140" }
tokio = { version = "1.43.0", features = ["full"] }
cynic = { version = "3", features = ["http-reqwest"] }
serde = { version = "1.0.218", features = ["derive"] }
config = { version = "0.15.9", features = ["yaml", "toml"] }
kube = { version = "1.0.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }

[build-dependencies]
cynic-codegen = { version = "3" }