[package]
name = "xtm-composer"
version = "1.0.2"
edition = "2024"

[dependencies]
slug = { version = "0.1" }
rsa = { version = "0.9.9" }
bollard = { version = "0.19.4" }
chrono = { version = "0.4.42" }
futures = { version = "0.3.31" }
rolling-file = { version = " 0.2.0" }
tracing = { version = "0.1.44" }
tracing-appender = { version = "0.2.4" }
tracing-subscriber = { version = "0.3.22", features = ["json"] }
async-trait = { version = "0.1.89" }
reqwest = { version = "0.12.28" } # Pinned due to cynic incompatibility with 0.13.x
serde_json = { version = "1.0.148" }
tokio = { version = "1.43.0", features = ["full"] }
cynic = { version = "3.12.0", features = ["http-reqwest"] }
serde = { version = "1.0.218", features = ["derive"] }
config = { version = "0.15.19", features = ["yaml", "toml"] }
kube = { version = "3.0.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.1", features = ["latest"] }
base64 = "0.22.1"
aes-gcm = "0.10.3"
sha2 = "0.10.8"

[build-dependencies]
cynic-codegen = { version = "3" }
